--- a/report_data_semantics/capitolo4.tex
+++ b/report_data_semantics/capitolo4.tex
@@ -2,4 +2,8 @@
 \label{ch:capitolo4}
 
 
-\section{General considerations}\label{sec:general_considerations}
+\section{Univariate Regression}
+
+\section{Multiple Regression}
+
+\section{Multivariate Regression}
