--- a/report_data_semantics/capitolo5.tex
+++ b/report_data_semantics/capitolo5.tex
@@ -22,6 +22,7 @@ On the other hand, the values of each of the 7 attributes \texttt{countryOfOrigi
     \item \texttt{not\_from\_[continent code]}: when the value of the attribute is 0
     \item \texttt{is\_from\_[continent code]}: when the value of the attribute is $\geq$ 1
 \end{itemize}
+Binarization was preferred over creation of multiple bins, as it allows for a more linear interpretation of the results. 
 An attempt was performed to include genres; however, this did not lead to more interesting results.
 
 \section{Extraction and discussion of frequent patterns}\label{sec:freq_patterns}
